# sdypy-model

./: .gitattributes  .gitignore  CONTRIBUTING.rst  License  README.md  README.rst  pyproject.toml  readthedocs.yaml  requirements.dev.txt  requirements.txt  sync_version.py
.github/workflows/: pytest.yaml  release_and_publish_on_pypi.yaml
docs/: requirements.txt
docs/source/: changelog.md  code.rst  conf.py  examples.md  getting_started.md  getting_started.rst  index.rst
docs/source/tutorials/: acoustic_external.md  beam.md  index.md  shell.md  tetrahedron.md
examples/: acoustic_external_example.py  beam_example.py  shell_example.py  tetrahedron_example.py
examples/data/: Beam - simple.msh  L_bracket.msh
sdypy/: __init__.py
sdypy/model/: __init__.py  eigenvalue_solution.py
sdypy/model/acousitc_external/: __init__.py  __main__.py  integrators.py  matrix_assembly.py  mesh.py  quadrature.py  solve.py
sdypy/model/acousitc_external/elements/: C_p1.py  DC_p1.py  __init__.py
sdypy/model/acoustic_external/: __init__.py  __main__.py  acoustic_external_problem.py  geometry.py  integrators.py  kernels.py  matrix_assembly.py  mesh.py  quadrature.py  solve.py
sdypy/model/acoustic_external/elements/: C_p1.py  DC_p1.py  __init__.py
sdypy/model/beam/: beam.py
sdypy/model/mesh/: __init__.py  mesh_2D.py  mesh_3D.py
sdypy/model/shell/: shell.py
sdypy/model/tetrahedron/: mass_tet_basis.py  tet10.py
tests/: test_acoustic_external_problem.py  test_basic.py  test_fem_correctness.py  test_public_api_conformance.py
