[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "sdypy-model"
version = "0.2.0"
authors = [
    { name = "Klemen Zaletelj, Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si" },
]
maintainers = [
    { name = "Klemen Zaletelj, Janko Slavič et al.", email = "klemen.zaletelj@fs.uni-lj.si" },
]
license = "MIT"
description = "System modeling, including lumped mass and FEM."
readme = "README.md"
keywords = [
    "System model",
    "lumped mass",
    "FEM",
]
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.23.4",
    "numpy>=1.14.3",
    "scipy>=1.1.0",
    "pylump",
    "pyvista",
    "pyvistaqt",
    "meshio",
    "gmsh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
qt = [
    "pyqt6",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton>=0.5.2",
    "myst-parser",
]
dev = [
    "sdypy-model[docs]",
    "twine",
    "wheel",
    "pytest",
    "build",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/sdypy/sdypy-model"
Source = "https://github.com/sdypy/sdypy-model"

[tool.hatch.build.targets.wheel]
packages = ["sdypy"]

[tool.hatch.build.targets.sdist]
include = [
    "sdypy/",
    "tests/",
    "docs/",
    "README.md",
    "License",
    "pyproject.toml",
    "readthedocs.yaml",
    "CONTRIBUTING.rst",
]
exclude = [
    "docs/_build/",
    "docs/build/",
]
